# neotransact

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
api/: admin.py  serializers.py  urls.py  views.py
api/management/commands/: create_admin.py  refresh_materialized_view.py  run.py
api/migrations/: 0001_initial.py  0002_transaction.py  0003_etljob.py  0004_auto_20241124_2247.py  0005_clienttransactionsummary.py
api/models/: __init__.py  client.py  client_transactions_summary.py  etl_job.py  transaction.py
config/: settings.py  urls.py
data/: clients.csv  transactions.xlsx
etl/: base.py  constants.py  extract.py  load.py  transform.py  utils.py
scripts/: generate_clients.py  generate_transactions.py
tests/: __init__.py  test_api.py  test_extract.py  test_load.py  test_transform.py  test_utils.py
tests/mock_data/: clients.csv  transactions.xlsx
